# rent-picker

./: .gitignore  README.md  docker-compose.gcp.yml  docker-compose.otel.yml  docker-compose.yml
.gcp/: ops_agent_config.yml
.github/workflows/: web-scraping-build.yml  web-scraping-test.yml
.litestream/: .env.sample  litestream.yaml.gcp.sample
.open-telemetry/: .env.sample  otel-collector-config.gcp.yaml  otel-collector-config.yaml
bat/: rent-picker-scrape.bat
litestream/: litestream.yaml.aws.sample
sql-ddl/: create_table.sql  create_table_room_header.sql
web-scraping/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile_release
web-scraping/adapter/: Cargo.toml
web-scraping/adapter/src/: controller.rs  lib.rs
web-scraping/adapter/src/dto/: mod.rs  request.rs
web-scraping/cui/: Cargo.toml
web-scraping/cui/src/: lib.rs  main.rs
web-scraping/cui/src/cui/: mod.rs  options.rs
web-scraping/cui/src/cui/options/: mod.rs
web-scraping/cui/src/cui/options/sub_command/: db.rs  health_check.rs  mod.rs  web.rs
web-scraping/cui/src/cui/options/value_enum/: area.rs  data_action.rs  mod.rs  service.rs  table.rs  table_type.rs
web-scraping/domain/: Cargo.toml
web-scraping/domain/src/model/: as_vec.rs  jst.rs  mod.rs  raw_room.rs  raw_room_update_date.rs  raw_rooms.rs  residence.rs  residence_header.rs  residences.rs  room.rs  room_header.rs  room_headers.rs  room_raw.rs  room_sanitize.rs  rooms.rs  table_name.rs  table_type.rs  target_area.rs
web-scraping/domain/src/repository/: mod.rs  raw_room.rs  repositories.rs  room_header.rs  suumo.rs
web-scraping/dotenv/: .env.sample
web-scraping/infra/: Cargo.toml
web-scraping/infra/src/: env.rs  lib.rs  log.rs  progress_bar.rs  usecase.rs
web-scraping/infra/src/logging/: filter.rs  mod.rs  writer.rs
web-scraping/infra/src/logging/filtered_layer/: bunyan.rs  mod.rs  open_telemetry.rs
web-scraping/infra/src/logging/layer/: mod.rs  open_telemetry.rs
web-scraping/infra/src/model/: mod.rs  raw_room.rs  room_header.rs  room_header_summary.rs  room_raw.rs
web-scraping/infra/src/persistence/: sqlite.rs
web-scraping/infra/src/repository/: mod.rs
web-scraping/infra/src/repository/crawler/: html_parser.rs  http_client.rs  mod.rs  reqwest_crawler.rs  struct_base.rs  trait_base.rs
web-scraping/infra/src/repository/sqlite/: mod.rs  raw_room.rs  repository_impl.rs  room_header.rs  sql.rs
web-scraping/infra/src/repository/sqlite/sql/: mod.rs  raw_room.rs  room_header.rs  room_header_summary.rs
web-scraping/infra/src/repository/suumo/: mod.rs  repository_impl.rs  search_query_params.rs  selector.rs
web-scraping/infra/src/repository/suumo/crawler/: mod.rs  selector.rs  suumo_crawler.rs
web-scraping/infra/src/repository/suumo/crawler/search_query/: builder.rs  builder_fields.rs  mod.rs  params.rs  params_in_list_page.rs
web-scraping/infra/src/repository/suumo/crawler/selector/: health_check.rs  mod.rs  raw_room.rs  room.rs  room_header.rs
web-scraping/logging/: Cargo.toml
web-scraping/logging/src/: env.rs  filter.rs  lib.rs  writer.rs
web-scraping/logging/src/filtered_layer/: bunyan.rs  mod.rs  open_telemetry.rs  stackdriver.rs
web-scraping/logging/src/init/: mod.rs
web-scraping/logging/src/layer/: mod.rs  open_telemetry.rs  stackdriver.rs
web-scraping/usecase/: Cargo.toml
web-scraping/usecase/src/: env.rs  lib.rs  progress_bar.rs
web-scraping/usecase/src/usecase/: health_check.rs  mod.rs  read_db_for_summary.rs  scrape_raw_rooms.rs  scrape_room_headers.rs  scrape_rooms.rs  search_rent.rs
