[workspace]
members = [
    "cui",
    "infra",
    "adapter",
    "usecase",
    "domain"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
description = "Tool to get rental information by web scraping in Rust"

[profile.release]
strip = "symbols"

[workspace.dependencies]
# ローカルクレート
infra = {path = "./infra"}
adapter = {path = "./adapter"}
usecase = {path = "./usecase"}
domain = {path = "./domain"}

# infra
anyhow = "1.0.66"
async-trait = "0.1.59"
reqwest = "0.11.13"
scraper = "0.13.0"
chrono = "0.4.23"
dotenv = "0.15.0"
futures = "0.3.25"
regex = "1.7.0"
tempfile = "3.3.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-bunyan-formatter = "0.3.4"
tracing-subscriber = "0.3.16"
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "sqlite", "chrono"] }
indicatif = "0.17.2"

# adapter
serde = "1.0.147"
serde_derive = "1.0.147"
derive-new = "0.5.9"

# domain
url = "2.3.1"


# cui
clap = { version = "4.0.18", features = ["derive"] }
