[package]
name = "infra"
version.workspace = true
edition.workspace = true
description.workspace = true


[dependencies]
domain.workspace = true
usecase.workspace = true
anyhow.workspace = true
async-trait.workspace = true
dotenv.workspace = true
futures.workspace = true
regex.workspace = true
tempfile.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-bunyan-formatter.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
reqwest.workspace = true
scraper.workspace = true
serde.workspace = true
serde_derive.workspace = true
