[package]
name = "infra"
version.workspace = true
edition.workspace = true
description.workspace = true


[dependencies]
domain.workspace = true
usecase.workspace = true
anyhow.workspace = true
async-trait.workspace = true
dotenv.workspace = true
futures.workspace = true
regex.workspace = true
tempfile.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
reqwest.workspace = true
scraper.workspace = true
serde.workspace = true
serde_derive.workspace = true
derive-new.workspace = true
sqlx.workspace = true

