[package]
name = "logging"
version.workspace = true
edition.workspace = true
description.workspace = true


[dependencies]
chrono.workspace = true
cfg-if = "1.0.0"


# tracing
tracing.workspace = true
tracing-appender = "0.2.2"
tracing-subscriber = "0.3.16"


# bunyan
tracing-bunyan-formatter = { version = "0.3.4", optional = true }

# otel
tracing-opentelemetry = { version = "0.18.0", default-features = false, features = ["tracing-log", "metrics"], optional = true }
opentelemetry = { version = "0.18.0", default-features = false, features = ["trace", "rt-tokio", "metrics"], optional = true }
opentelemetry-otlp = { version = "0.11.0", default-features = false, features = ["grpc-tonic", "trace", "metrics"], optional = true }


[features]
default = ["bunyan"]
bunyan = ["dep:tracing-bunyan-formatter"]
otel = ["dep:opentelemetry", "dep:opentelemetry-otlp", "dep:tracing-opentelemetry"]
stackdriver = []